--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <a href="#"><img src="assets/Logo.svg" alt=""></a>
+        </nav>
+        <img src="assets/schuur.webp" alt="">
+    </header>
+
+    <main>
+        <section>
+            <H1>Ontdek de aankomende workshops</H1>
+            <p>Workshops zijn fantastische leermogelijkheden waarbij deelnemers praktische vaardigheden kunnen
+                verwerven,
+                nieuwe kennis kunnen opdoen en vaak ook nieuwe mensen kunnen ontmoeten.</p>
+        </section>
+
+        <article>
+            <img src="assets/ZADEN.webp" alt="">
+            <h2></h2>
+            <p></p>
+            <a href="#"></a>
+        </article>
+    </main>
+
+    <footer>
+        <section>
+            <h3>ADRES</h3>
+            <p>OBA Linnaeusstraat Linnaeusstraat 44 1092 CL Amsterdam</p>
+        </section>
+
+        <section>
+            <h3>SAMENWERKEN</h3>
+            <p>Wil jij met andere organisaties, buurtbewoners en studenten samenwerken aan de stedelijke uitdagingen van
+                Amsterdam Oost? Stuur een e-mail naar buurtcampusoost@hva.nl.</p>
+        </section>
+
+        <section>
+            <h3>CONTACT</h3>
+            <p>buurtcampusoost@hva.nl 06 43450198 BTW 0055.81.205.B01</p>
+        </section>
+    </footer>
+
 </body>
+
 </html>
