class names toegevoegd

--- a/form.html
+++ b/form.html
@@ -9,23 +9,23 @@
     <form action="">
         <legend>Inschrijf formulier</legend>
             <fieldset>
-                <label class="text" for="voornaam">Voornaam</label>
-                <input class="text" id="voornaam" type="text" placeholder="voornaam">
+                <label class="description-text" for="voornaam">Voornaam</label>
+                <input class="input-text" id="voornaam" type="text" placeholder="voornaam">
             </fieldset>
 
             <fieldset>
-                <label class="text" for="achternaam">Achternaam</label>
-                <input class="text" id="achternaam" type="text" placeholder="achternaam">
+                <label class="description-text" for="achternaam">Achternaam</label>
+                <input class="input-text" id="achternaam" type="text" placeholder="achternaam">
             </fieldset>
 
             <fieldset>
-                <label class="text" for="tel">Tel.</label>
-                <input class="text" id="tel" type="tel" placeholder="06-00000000">
+                <label class="description-text" for="tel">Tel.</label>
+                <input class="input-text" id="tel" type="tel" placeholder="06-00000000">
             </fieldset>
 
             <fieldset>
-                <label class="text" for="mail">E-mail</label>
-                <input class="text" id="mail" placeholder="E-mail">
+                <label class="description-text" for="mail">E-mail</label>
+                <input class="input-text" id="mail" placeholder="E-mail">
             </fieldset>
         <button>Send</button>
     </form>
