Html opzet formulier

--- a/form.html
+++ b/form.html
@@ -12,7 +12,13 @@
             <fieldset>
                 <label class="description-text" for="voornaam">Voornaam</label>
                 <input class="input-text" id="voornaam" type="text" placeholder="voornaam">
+                <button type="submit">Verstuur</button>
             </fieldset>
+
+            <!-- <fieldset>
+                <label class="description-text" for="voornaam">Voornaam</label>
+                <input class="input-text" id="voornaam" type="text" placeholder="voornaam">
+            </fieldset> -->
 
             <fieldset>
                 <label class="description-text" for="achternaam">Achternaam</label>
@@ -30,5 +36,6 @@
             </fieldset>
         <button>Send</button>
     </form>
+<script src="script.js"></script>
 </body>
 </html>
