--- a/Form2.html
+++ b/Form2.html
@@ -1,4 +1,5 @@
-<form action="">
+<link rel="stylesheet" href="stylesheet.css"><form action="">
+
     <fieldset>
         <legend>Inschrijf formulier</legend>
             <input type="text" placeholder="Voornaam" required>
@@ -8,3 +9,5 @@
         <button type="submit">Verzend</button>
     </fieldset>
 </form>
+
+<script src="script.js"></script>
