link naar bevesteging pagina toegevoegd

--- a/Form2.html
+++ b/Form2.html
@@ -6,7 +6,7 @@
             <input type="text" placeholder="Achternaam" required>
             <input type="text" placeholder="Telefoonnummer" required>
             <input type="text" placeholder="E-mail" required>
-        <button type="submit">Verzend</button>
+        <a href="bevesteging.html"><button type="submit">Verzend</button></a>
     </fieldset>
 </form>
 
