--- a/bevesteging.html
+++ b/bevesteging.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bevestiging</title>
 </head>
 <body>
+
+    <img class="Harry" src="assets/harry-blij.gif" alt="">
+    <h1>Gelukt!</h1>
+    <p>Tot snel</p>
+    <a href=""><button>Home</button></a>
     
 </body>
 </html>
