rode kleur toegevoegd bij foutmelding

--- a/Form2.html
+++ b/Form2.html
@@ -1,12 +1,14 @@
-<link rel="stylesheet" href="stylesheet.css"><form action="">
+<link rel="stylesheet" href="stylesheet.css">
 
+<form action="">
     <fieldset>
         <legend>Inschrijf formulier</legend>
             <input type="text" placeholder="Voornaam" required>
             <input type="text" placeholder="Achternaam" required>
             <input type="text" placeholder="Telefoonnummer" required>
             <input type="text" placeholder="E-mail" required>
-        <a href="bevesteging.html"><button type="submit">Verzend</button></a>
+        <button type="submit">Verzend</button>
+        <!-- <a href="bevesteging.html" type="submit">Verzend</a> -->
     </fieldset>
 </form>
 
