--- a/bevesteging.html
+++ b/bevesteging.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet.css"><form action=""></form>
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Bevestiging</title>
 </head>
 <body>
