input types veranderd

--- a/Form2.html
+++ b/Form2.html
@@ -5,9 +5,10 @@
         <legend>Inschrijf formulier</legend>
             <input type="text" placeholder="Voornaam" required>
             <input type="text" placeholder="Achternaam" required>
-            <input type="text" placeholder="Telefoonnummer" required>
-            <input type="text" placeholder="E-mail" required>
+            <input type="email" placeholder="Telefoonnummer" required>
+            <input type="mobiel" placeholder="E-mail" required>
         <button type="submit">Verzend</button>
+        <!-- <input type="submit"> -->
         <!-- <a href="bevesteging.html" type="submit">Verzend</a> -->
     </fieldset>
 </form>
