Met Koop clickable button naar pagina javascript geschreven

--- a/Form2.html
+++ b/Form2.html
@@ -1,16 +1,27 @@
-<link rel="stylesheet" href="stylesheet.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>Document</title>
+</head>
+<body>
 
-<form action="">
+<form>
     <fieldset>
         <legend>Inschrijf formulier</legend>
             <input type="text" placeholder="Voornaam" required>
-            <input type="text" placeholder="Achternaam" required>
-            <input type="email" placeholder="Telefoonnummer" required>
-            <input type="mobiel" placeholder="E-mail" required>
-        <button type="submit">Verzend</button>
+            <input type="text" placeholder="Achternaam" >
+            <input type="email" placeholder="Telefoonnummer" >
+            <input type="text" placeholder="E-mail" >
+        <button class="form-btn">Verzend</button>
         <!-- <input type="submit"> -->
         <!-- <a href="bevesteging.html" type="submit">Verzend</a> -->
     </fieldset>
 </form>
 
 <script src="script.js"></script>
+    
+</body>
+</html>
