Main gevuld met tekst, een knop en beeld

--- a/informatie.html
+++ b/informatie.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>informatie workshop Stekjes maken</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -13,12 +15,28 @@
     </header>
 
     <main>
-
+        <article>
+            <h1>Stekjes maken</h1>
+            <p>
+                Wil je leren hoe je zelf stekjes kunt maken en zo je plantenverzameling uitbreiden? Tijdens deze
+                workshop
+                leer je de technieken om gezonde stekjes te nemen, ze goed te verzorgen en uiteindelijk uit te laten
+                groeien
+                tot mooie nieuwe planten. Of je nu een beginnende plantenliefhebber bent of al ervaring hebt, deze
+                hands-on
+                sessie biedt praktische tips en tricks die je direct kunt toepassen. Kom langs, breng je groene vingers
+                in
+                de praktijk en ga naar huis met een nieuwe plant!
+            </p>
+            <a href="">Inschrijven</a>
+            <img src="assets/schuur.webp" alt="">
+        </article>
     </main>
 
     <footer>
-        
+
     </footer>
 
 </body>
+
 </html>
