a tag class gegeven en als button opgemaakt

--- a/informatie.html
+++ b/informatie.html
@@ -29,8 +29,8 @@
                 in
                 de praktijk en ga naar huis met een nieuwe plant!
             </p>
-            <a href="">Inschrijven</a>
-            <img src="assets/schuur.webp" alt="">
+            <a class="inschrijf-button" href="">Inschrijven</a>
+            <!-- <img src="assets/schuur.webp" alt=""> -->
         </article>
     </main>
 
