--- a/informatie.html
+++ b/informatie.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://kimnikitaschijf.github.io/look-and-feel-styleguide/biebinbloei.css">
     <link rel="stylesheet" href="stylesheet.css">
     <title>informatie workshop Stekjes maken</title>
 </head>
@@ -30,7 +31,7 @@
                 de praktijk en ga naar huis met een nieuwe plant!
             </p>
             <a class="inschrijf-button" href="">Inschrijven</a>
-            <!-- <img src="assets/schuur.webp" alt=""> -->
+            <img class="img-infomatie" src="assets/schuur.webp" alt="">
         </article>
     </main>
 
