img grootte aangepast

--- a/informatie.html
+++ b/informatie.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <article>
+        <article class="informatie-stekjes">
             <h1>Stekjes maken</h1>
             <p>
                 Wil je leren hoe je zelf stekjes kunt maken en zo je plantenverzameling uitbreiden? Tijdens deze
@@ -31,8 +31,8 @@
                 de praktijk en ga naar huis met een nieuwe plant!
             </p>
             <a class="inschrijf-button" href="">Inschrijven</a>
-            <img class="img-infomatie" src="assets/schuur.webp" alt="">
         </article>
+        <img class="img-infomatie" src="assets/schuur.webp" alt="">
     </main>
 
     <footer>
