knop linkt naar inschrijf-formulier

--- a/informatie.html
+++ b/informatie.html
@@ -30,7 +30,7 @@
                 in
                 de praktijk en ga naar huis met een nieuwe plant!
             </p>
-            <a class="inschrijf-button" href="">Inschrijven</a>
+            <a class="inschrijf-button" href="inschrijf-formulier.html">Inschrijven</a>
         </article>
         <img class="img-infomatie" src="assets/schuur.webp" alt="">
     </main>
