--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://kimnikitaschijf.github.io/look-and-feel-styleguide/biebinbloei.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Agenda</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="#"><img src="assets/Logo.svg" alt=""></a>
+            <a class="logo" href="#"><img src="assets/Logo.svg" alt=""></a>
         </nav>
         <img src="assets/schuur.webp" alt="">
     </header>
