--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <a class="logo" href="#"><img src="assets/Logo.svg" alt=""></a>
+            <a href="#"><img class="logo" src="assets/Logo.svg" alt=""></a>
         </nav>
         <img src="assets/schuur.webp" alt="">
     </header>
