img formaat responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="#"><img class="logo" src="assets/Logo.svg" alt=""></a>
         </nav>
-        <img src="assets/schuur.webp" alt="">
+        <img class="img-header-agenda" src="assets/schuur.webp" alt="">
     </header>
 
     <main>
