img achter logo

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header>
-        <nav>
+    <header class="header-agenda">
+        <nav class="nav-agenda">
             <a href="#"><img class="logo" src="assets/Logo.svg" alt=""></a>
         </nav>
         <img class="img-header-agenda" src="assets/schuur.webp" alt="">
