cursor pointer toegevoegd

--- a/informatie.html
+++ b/informatie.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="informatie-main">
         <article class="informatie-stekjes">
             <h1>Stekjes maken</h1>
             <p>
