input naar mobiel en email aangepast

--- a/inschrijf-formulier.html
+++ b/inschrijf-formulier.html
@@ -13,8 +13,8 @@
         <legend>Inschrijf formulier</legend>
             <input type="text" placeholder="Voornaam" required>
             <input type="text" placeholder="Achternaam" >
-            <input type="email" placeholder="Telefoonnummer" >
-            <input type="text" placeholder="E-mail" >
+            <input type="mobiel" placeholder="Telefoonnummer" >
+            <input type="email" placeholder="E-mail" >
         <button class="form-btn">Verzend</button>
         <!-- <input type="submit"> -->
         <!-- <a href="bevesteging.html" type="submit">Verzend</a> -->
