html opzet loading screen

--- a/inschrijf-formulier.html
+++ b/inschrijf-formulier.html
@@ -8,18 +8,27 @@
 </head>
 <body>
 
+
 <form>
     <fieldset>
         <legend>Inschrijf formulier</legend>
             <input type="text" placeholder="Voornaam" required>
-            <input type="text" placeholder="Achternaam" >
-            <input type="mobiel" placeholder="Telefoonnummer" >
-            <input type="email" placeholder="E-mail" >
-        <button class="form-btn">Verzend</button>
+            <input type="text" placeholder="Achternaam" required>
+            <input type="mobiel" placeholder="Telefoonnummer" required>
+            <input type="email" placeholder="E-mail" required>
+            
+            <button class="form-btn" type="submit">Verzend</button>
         <!-- <input type="submit"> -->
         <!-- <a href="bevesteging.html" type="submit">Verzend</a> -->
     </fieldset>
 </form>
+
+<div>
+    <img src="assets/harry-blij.gif" alt="">
+    <h1>Gelukt!</h1>
+    <p>Je hebt je ingeschreven</p>
+</div>
+
 
 <script src="script.js"></script>
     
