loading screen toegevoegd
Het laad scherm komt in beeld wanneer je op de button klikt, alleen moet er nog bij dat het laad scherm pas in beeld mag komen zodra het formulier juist is ingevuld

--- a/inschrijf-formulier.html
+++ b/inschrijf-formulier.html
@@ -24,11 +24,10 @@
 </form>
 
 <div>
-    <img src="assets/harry-blij.gif" alt="">
+    <img class="dancing-harry" src="assets/annimated-harry.gif" alt="">
     <h1>Gelukt!</h1>
     <p>Je hebt je ingeschreven</p>
 </div>
-
 
 <script src="script.js"></script>
     
