Nog geen resultaat maar ben aan het sleutelen met JS

--- a/inschrijf-formulier.html
+++ b/inschrijf-formulier.html
@@ -17,7 +17,7 @@
             <input type="mobiel" placeholder="Telefoonnummer" required>
             <input type="email" placeholder="E-mail" required>
             
-            <button class="form-btn" type="submit">Verzend</button>
+            <button class="form-btn" id="hide-screen" type="submit">Verzend</button>
         <!-- <input type="submit"> -->
         <!-- <a href="bevesteging.html" type="submit">Verzend</a> -->
     </fieldset>
