a tag toegevoegd naar informatie pagina

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="assets/ZADEN.webp" alt="">
             <h2></h2>
             <p></p>
-            <a href="#"></a>
+            <a href="informatie.html">Meer</a>
         </article>
     </main>
 
