titel agenda toegevoegd

--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
             <a href="#"><img class="logo" src="assets/Logo.svg" alt=""></a>
         </nav>
         <img class="img-header-agenda" src="assets/schuur.webp" alt="">
+        <h1>AGENDA</h1>
     </header>
 
     <main>
         <section>
-            <H1>Ontdek de aankomende workshops</H1>
+            <h2>Ontdek de aankomende workshops</h2>
             <p>Workshops zijn fantastische leermogelijkheden waarbij deelnemers praktische vaardigheden kunnen
                 verwerven,
                 nieuwe kennis kunnen opdoen en vaak ook nieuwe mensen kunnen ontmoeten.</p>
         </section>
 
         <article>
-            <img src="assets/ZADEN.webp" alt="">
-            <h2></h2>
-            <p></p>
+            <h2>Workshop zaaien</h2>
+            <p>OBA Linnaeusstraat
+                gratis
+                29/05/2024</p>
             <a href="informatie.html">Meer</a>
         </article>
     </main>
