grid aangemaakt workshops

--- a/index.html
+++ b/index.html
@@ -19,23 +19,54 @@
     </header>
 
     <main>
-        <section>
+        <article>
             <h2>Ontdek de aankomende workshops</h2>
             <p>Workshops zijn fantastische leermogelijkheden waarbij deelnemers praktische vaardigheden kunnen
                 verwerven,
                 nieuwe kennis kunnen opdoen en vaak ook nieuwe mensen kunnen ontmoeten.</p>
-        </section>
+            </article>
 
-        <article>
-            <h2>Workshop zaaien</h2>
-            <p>OBA Linnaeusstraat
-                gratis
-                29/05/2024</p>
-            <a href="informatie.html">Meer</a>
-        </article>
+        <section class="workshop-grand-parent">
+            <ul class="workshop-parent-1">
+                <li class="workshop-child">
+                    <h3>Workshop zaaien</h2>
+                    <p>OBA Linnaeusstraat
+                        gratis
+                        29/05/2024</p>
+                    <a href="informatie.html">Meer</a>
+                </li>
+            </ul>
+            <ul class="workshop-parent-2">
+                <li class="workshop-child">
+                    <h3>Workshop zaaien</h2>
+                    <p>OBA Linnaeusstraat
+                        gratis
+                        29/05/2024</p>
+                    <a href="informatie.html">Meer</a>
+                </li>
+            </ul>
+            <ul class="workshop-parent-3">
+                <li class="workshop-child">
+                    <h3>Workshop zaaien</h2>
+                    <p>OBA Linnaeusstraat
+                        gratis
+                        29/05/2024</p>
+                    <a href="informatie.html">Meer</a>
+                </li>
+            </ul>
+            <ul class="workshop-parent-4">
+                <li class="workshop-child">
+                    <h3>Workshop zaaien</h2>
+                    <p>OBA Linnaeusstraat
+                        gratis
+                        29/05/2024</p>
+                    <a href="informatie.html">Meer</a>
+                </li>
+            </ul>
+        </section>
     </main>
 
-    <footer>
+    <!-- <footer>
         <section>
             <h3>ADRES</h3>
             <p>OBA Linnaeusstraat Linnaeusstraat 44 1092 CL Amsterdam</p>
@@ -51,7 +82,7 @@
             <h3>CONTACT</h3>
             <p>buurtcampusoost@hva.nl 06 43450198 BTW 0055.81.205.B01</p>
         </section>
-    </footer>
+    </footer> -->
 
 </body>
 
