beeld en tekstuele inhoud workshops aangepast

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
             <ul class="workshop-parent-2">
                 <li class="workshop-child">
-                    <h3>Workshop zaaien</h2>
+                    <h3>Stekjes maken</h2>
                     <p>OBA Linnaeusstraat
                         gratis
                         29/05/2024</p>
@@ -47,7 +47,7 @@
             </ul>
             <ul class="workshop-parent-3">
                 <li class="workshop-child">
-                    <h3>Workshop zaaien</h2>
+                    <h3>Aardbeien plukken</h2>
                     <p>OBA Linnaeusstraat
                         gratis
                         29/05/2024</p>
@@ -56,7 +56,7 @@
             </ul>
             <ul class="workshop-parent-4">
                 <li class="workshop-child">
-                    <h3>Workshop zaaien</h2>
+                    <h3>Schilderen (potten)</h2>
                     <p>OBA Linnaeusstraat
                         gratis
                         29/05/2024</p>
