--- a/inschrijf-formulier.html
+++ b/inschrijf-formulier.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="https://kimnikitaschijf.github.io/look-and-feel-styleguide/biebinbloei.css"> -->
     <link rel="stylesheet" href="stylesheet.css">
     <title>Document</title>
 </head>
@@ -12,10 +13,18 @@
 <form>
     <fieldset>
         <legend>Inschrijf formulier</legend>
-            <input type="text" placeholder="Voornaam" required>
-            <input type="text" placeholder="Achternaam" required>
-            <input type="mobiel" placeholder="Telefoonnummer" required>
-            <input type="email" placeholder="E-mail" required>
+            <label for="Voornaam">Voornaam
+                <input type="text" placeholder="Voornaam" required>
+            </label>
+            <label for="Achternaam">Achternaam
+                <input type="text" placeholder="Achternaam" required>
+            </label>
+            <label for="Mobiel">Mobiel
+                <input type="mobiel" placeholder="Telefoonnummer" required>
+            </label>
+            <label for="E-mail">E-mail
+                <input type="email" placeholder="E-mail" required>
+            </label>
             
             <button class="form-btn" id="hide-screen" type="submit">Verzend</button>
         <!-- <input type="submit"> -->
