a tags opgemaakt tot buttons

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <nav class="nav-agenda">
             <a href="#"><img class="logo" src="assets/Logo.svg" alt=""></a>
         </nav>
-        <img class="img-header-agenda" src="assets/schuur.webp" alt="">
+        <!-- <img class="img-header-agenda" src="assets/schuur.webp" alt=""> -->
         <h1>AGENDA</h1>
     </header>
 
     <main>
-        <article>
+        <article class="intro-text">
             <h2>Ontdek de aankomende workshops</h2>
             <p>Workshops zijn fantastische leermogelijkheden waarbij deelnemers praktische vaardigheden kunnen
                 verwerven,
@@ -31,7 +31,6 @@
                 <li class="workshop-child">
                     <h3>Workshop zaaien</h2>
                     <p>OBA Linnaeusstraat
-                        gratis
                         29/05/2024</p>
                     <a href="informatie.html">Meer</a>
                 </li>
@@ -40,7 +39,6 @@
                 <li class="workshop-child">
                     <h3>Stekjes maken</h2>
                     <p>OBA Linnaeusstraat
-                        gratis
                         29/05/2024</p>
                     <a href="informatie.html">Meer</a>
                 </li>
@@ -49,7 +47,6 @@
                 <li class="workshop-child">
                     <h3>Aardbeien plukken</h2>
                     <p>OBA Linnaeusstraat
-                        gratis
                         29/05/2024</p>
                     <a href="informatie.html">Meer</a>
                 </li>
@@ -58,7 +55,6 @@
                 <li class="workshop-child">
                     <h3>Schilderen (potten)</h2>
                     <p>OBA Linnaeusstraat
-                        gratis
                         29/05/2024</p>
                     <a href="informatie.html">Meer</a>
                 </li>
