inschrijf formulier vormgegeven

--- a/inschrijf-formulier.html
+++ b/inschrijf-formulier.html
@@ -7,23 +7,23 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>Document</title>
 </head>
-<body>
+<body class="body-inschrijf-formulier">
 
 
-<form>
+<form class="form-inschrijf-formulier">
     <fieldset>
         <legend>Inschrijf formulier</legend>
-            <label for="Voornaam">Voornaam
-                <input type="text" placeholder="Voornaam" required>
+            <label class="label-formulier" for="Voornaam">Voornaam (required)
+                <input class="input-formulier" type="text" placeholder="Voornaam" required>
             </label>
-            <label for="Achternaam">Achternaam
-                <input type="text" placeholder="Achternaam" required>
+            <label class="label-formulier" for="Achternaam">Achternaam (required)
+                <input class="input-formulier" type="text" placeholder="Achternaam" required>
             </label>
-            <label for="Mobiel">Mobiel
-                <input type="mobiel" placeholder="Telefoonnummer" required>
+            <label class="label-formulier" for="Mobiel">Mobiel (required)
+                <input class="input-formulier" type="mobiel" placeholder="+31 123456789" required>
             </label>
-            <label for="E-mail">E-mail
-                <input type="email" placeholder="E-mail" required>
+            <label class="label-formulier" for="E-mail">E-mail (required)
+                <input class="input-formulier" type="email" placeholder="johndoe@gmail.com" required>
             </label>
             
             <button class="form-btn" id="hide-screen" type="submit">Verzend</button>
