a tot button opgemaakt

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#"><img class="logo" src="assets/Logo.svg" alt=""></a>
         </nav>
         <!-- <img class="img-header-agenda" src="assets/schuur.webp" alt=""> -->
-        <h1>AGENDA</h1>
+        <h1 class="pagina-titels">AGENDA</h1>
     </header>
 
     <main>
