--- a/informatie.html
+++ b/informatie.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-informatie">
         <nav>
 
         </nav>
@@ -32,7 +32,7 @@
             </p>
             <a class="inschrijf-button" href="inschrijf-formulier.html">Inschrijven</a>
         </article>
-        <img class="img-infomatie" src="assets/schuur.webp" alt="">
+        <!-- <img class="img-infomatie" src="assets/schuur.webp" alt=""> -->
     </main>
 
     <footer>
